test/errors/error22.vult
fun foo () {
   x = 0;
}

